handle exceptions badly